--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="./assets/images/my-avatar.png" alt="Richard hanrick">
         </figure>
         <div class="info-content">
-            <h1 class="name" title="Richard hanrick">Muhammad Rasyid Ridha</h1>
+            <h1 class="name" title="Richard hanrick">Muhammad Rasyid <br> Ridha</h1>
             <p class="title"> Pelajar smk2 Banjarmasin</p>
         </div>
 
